add icons for links

--- a/index.html
+++ b/index.html
@@ -24,13 +24,76 @@
 
 <h1>library<hr></h1>
 
-<div id="textbooks">TextBooks</div>
-<div id="drama">Drama</div>
-<div id="history">History</div>
-<div id="poetry">Poetry</div>
-<div id="fiction">Fiction</div>
-<div id="fantasy">Fantasy</div>
-<div id="sci-fi">Sci-fi</div>
+<div id="textbooks">
+    <div><h1>Textbooks</h1></div>
+    <div class="book-setting">
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
+</div>
+<div id="drama">
+    <div><h1>Drama</h1></div>
+    <div class="book-setting">
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
+</div>
+<div id="history">
+    <div><h1>History</h1></div>
+    <div class="book-setting">
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+</div>
+</div>
+<div id="poetry">
+    <div><h1>Poetry</h1></div>
+    <div class="book-setting">
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
+</div>
+<div id="fiction">
+    <div><h1>Fiction</h1></div>
+    <div class="book-setting">
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
+</div>
+<div id="fantasy">
+    <div><h1>Fantasy</h1></div>
+    <div class="book-setting">
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
+</div>
+<div id="sci-fi">
+    <div><h1>Sci-fi</h1></div>
+    <div class="book-setting">
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
+</div>
 
 
 
