--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <div><h1>Textbooks</h1></div>
     <div class="book-setting">
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li><a href="textbooks.html"><img src="images/bookshelf.png" alt="textbook list icon" height="30px" width="30px"></a></li>
+            <li><a href=""><img src="images/share-variant.png" alt="share icon" height="30px" width="30px"></a></li>
+            <li><a href=""><img src="images/book-plus.png" alt="add new book icon" height="30px" width="30px"></a></li>
         </ul>
     </div>
 </div>
@@ -38,39 +38,39 @@
     <div><h1>Drama</h1></div>
     <div class="book-setting">
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li><a href="textbooks.html"><img src="images/bookshelf.png" alt="textbook list icon" height="30px" width="30px"></a></li>
+            <li><a href=""><img src="images/share-variant.png" alt="share icon" height="30px" width="30px"></a></li>
+            <li><a href=""><img src="images/book-plus.png" alt="add new book icon" height="30px" width="30px"></a></li>
         </ul>
     </div>
 </div>
 <div id="history">
     <div><h1>History</h1></div>
     <div class="book-setting">
-    <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-    </ul>
+        <ul>
+            <li><a href="textbooks.html"><img src="images/bookshelf.png" alt="textbook list icon" height="30px" width="30px"></a></li>
+            <li><a href=""><img src="images/share-variant.png" alt="share icon"height="30px" width="30px"></a></li>
+            <li><a href=""><img src="images/book-plus.png" alt="add new book icon" height="30px" width="30px"></a></li>
+        </ul>
 </div>
 </div>
 <div id="poetry">
     <div><h1>Poetry</h1></div>
     <div class="book-setting">
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
+            <li><a href="textbooks.html"><img src="images/bookshelf.png" alt="textbook list icon" height="30px" width="30px"></a></li>
+            <li><a href=""><img src="images/share-variant.png" alt="share icon" height="30px" width="30px"></a></li>
+            <li><a href=""><img src="images/book-plus.png" alt="add new book icon" height="30px" width="30px"></a></li>
+        </ul>  
     </div>
 </div>
 <div id="fiction">
     <div><h1>Fiction</h1></div>
     <div class="book-setting">
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li><a href="textbooks.html"><img src="images/bookshelf.png" alt="textbook list icon" height="30px" width="30px"></a></li>
+            <li><a href=""><img src="images/share-variant.png" alt="share icon" height="30px" width="30px"></a></li>
+            <li><a href=""><img src="images/book-plus.png" alt="add new book icon" height="30px" width="30px"></a></li>
         </ul>
     </div>
 </div>
@@ -78,9 +78,9 @@
     <div><h1>Fantasy</h1></div>
     <div class="book-setting">
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li><a href="textbooks.html"><img src="images/bookshelf.png" alt="textbook list icon" height="30px" width="30px"></a></li>
+            <li><a href=""><img src="images/share-variant.png" alt="share icon" height="30px" width="30px"></a></li>
+            <li><a href=""><img src="images/book-plus.png" alt="add new book icon" height="30px" width="30px"></a></li>
         </ul>
     </div>
 </div>
@@ -88,9 +88,9 @@
     <div><h1>Sci-fi</h1></div>
     <div class="book-setting">
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li><a href="textbooks.html"><img src="images/bookshelf.png" alt="textbook list icon" height="30px" width="30px"></a></li>
+            <li><a href=""><img src="images/share-variant.png" alt="share icon" height="30px" width="30px"></a></li>
+            <li><a href=""><img src="images/book-plus.png" alt="add new book icon" height="30px" width="30px"></a></li>
         </ul>
     </div>
 </div>
