--- a/index.html
+++ b/index.html
@@ -10,15 +10,18 @@
     
   <header>
     <div>
-        <div class="logo"> <img src="images/celeste.jpg" alt="curly haired goddess" height="50px" width="50px"></div>
-         Celeste Personal library</div>
-    <menu>
+        <div class="logo"><img src="images/airballoon.svg" alt="" height="40px" width="40px" color="white"></div>
+         Celeste library
+        </div>
+    <nav>
         <ul>
-        <li>search</li>
-        <li>Bookshop</li>
-        <button>plus</button>
+        <li><img src="images/magnify.png" alt="" height="30px" width="30px">
+            <input type="text">
+        </li>
+        <li>Bookshop <img src="images/cart.png" alt="" height="30px" width="30px"> </li>
+        <button><img src="images/plus-thick.png" alt="" height="30px" width="30px"></button>
     </ul>
-</menu>
+</nav>
   </header>
   <main>
 
@@ -38,7 +41,7 @@
     <div><h1>Drama</h1></div>
     <div class="book-setting">
         <ul>
-            <li><a href="textbooks.html"><img src="images/bookshelf.png" alt="textbook list icon" height="30px" width="30px"></a></li>
+            <li><a href="drama.html"><img src="images/bookshelf.png" alt="textbook list icon" height="30px" width="30px"></a></li>
             <li><a href=""><img src="images/share-variant.png" alt="share icon" height="30px" width="30px"></a></li>
             <li><a href=""><img src="images/book-plus.png" alt="add new book icon" height="30px" width="30px"></a></li>
         </ul>
@@ -48,7 +51,7 @@
     <div><h1>History</h1></div>
     <div class="book-setting">
         <ul>
-            <li><a href="textbooks.html"><img src="images/bookshelf.png" alt="textbook list icon" height="30px" width="30px"></a></li>
+            <li><a href="history.html"><img src="images/bookshelf.png" alt="textbook list icon" height="30px" width="30px"></a></li>
             <li><a href=""><img src="images/share-variant.png" alt="share icon"height="30px" width="30px"></a></li>
             <li><a href=""><img src="images/book-plus.png" alt="add new book icon" height="30px" width="30px"></a></li>
         </ul>
@@ -58,7 +61,7 @@
     <div><h1>Poetry</h1></div>
     <div class="book-setting">
         <ul>
-            <li><a href="textbooks.html"><img src="images/bookshelf.png" alt="textbook list icon" height="30px" width="30px"></a></li>
+            <li><a href="poetry.html"><img src="images/bookshelf.png" alt="textbook list icon" height="30px" width="30px"></a></li>
             <li><a href=""><img src="images/share-variant.png" alt="share icon" height="30px" width="30px"></a></li>
             <li><a href=""><img src="images/book-plus.png" alt="add new book icon" height="30px" width="30px"></a></li>
         </ul>  
@@ -68,7 +71,7 @@
     <div><h1>Fiction</h1></div>
     <div class="book-setting">
         <ul>
-            <li><a href="textbooks.html"><img src="images/bookshelf.png" alt="textbook list icon" height="30px" width="30px"></a></li>
+            <li><a href="fiction.html"><img src="images/bookshelf.png" alt="textbook list icon" height="30px" width="30px"></a></li>
             <li><a href=""><img src="images/share-variant.png" alt="share icon" height="30px" width="30px"></a></li>
             <li><a href=""><img src="images/book-plus.png" alt="add new book icon" height="30px" width="30px"></a></li>
         </ul>
@@ -78,7 +81,7 @@
     <div><h1>Fantasy</h1></div>
     <div class="book-setting">
         <ul>
-            <li><a href="textbooks.html"><img src="images/bookshelf.png" alt="textbook list icon" height="30px" width="30px"></a></li>
+            <li><a href="fantasy.html"><img src="images/bookshelf.png" alt="textbook list icon" height="30px" width="30px"></a></li>
             <li><a href=""><img src="images/share-variant.png" alt="share icon" height="30px" width="30px"></a></li>
             <li><a href=""><img src="images/book-plus.png" alt="add new book icon" height="30px" width="30px"></a></li>
         </ul>
@@ -88,7 +91,7 @@
     <div><h1>Sci-fi</h1></div>
     <div class="book-setting">
         <ul>
-            <li><a href="textbooks.html"><img src="images/bookshelf.png" alt="textbook list icon" height="30px" width="30px"></a></li>
+            <li><a href="sci-fi.html"><img src="images/bookshelf.png" alt="textbook list icon" height="30px" width="30px"></a></li>
             <li><a href=""><img src="images/share-variant.png" alt="share icon" height="30px" width="30px"></a></li>
             <li><a href=""><img src="images/book-plus.png" alt="add new book icon" height="30px" width="30px"></a></li>
         </ul>
@@ -101,13 +104,12 @@
 
   </main>
 
-  <footer>copyright Catangel007
+  <footer>&copy;2024 Catangel007
     <ul>
-    <li>Contact us</li>
-    <li>About</li>
+    <li><a href="http://">Contact us</a></li>
+    <li><a href=""> About</a></li>
     </ul>
-    <p><h6>credits</h6>
-    background image by Annie Spratt</p>
+    
   </footer>
 
     <script src="lib.js" defer></script>
