add Iframe for bookcase

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li class="search"><img src="images/magnify.png" alt="search button" height="30px" width="30px">
             <input type="text">
         </li>
-        <li> <img src="images/cart.png" alt="shopping button" height="30px" width="30px"> </li>
+        <li> <a href="https://www.amazon.com/books-used-books-textbooks/b?ie=UTF8&node=283155"><img src="images/cart.png" alt="shopping button" height="30px" width="30px"></a> </li>
         <button class="add"><img src="images/plus-thick.png" alt="add book to library" height="30px" width="30px"></button>
     </ul>
 </nav>
@@ -99,13 +99,33 @@
     </div>
 </div>
 
+<div>
+    <h1>New additions</h1>
+    <div class="trending">
+        <iframe src="books/ItStartswithUs.pdf" frameborder="0" height="280rem" width="200rem"></iframe>
+        <iframe src="books/Remarkably-Bright-Creatures.pdf" frameborder="0" height="280rem" width="200rem"></iframe>
+        <iframe src="books/A-Mind-for-Numbers-PDFdrive.pdf" frameborder="0" height="280rem" width="200rem"></iframe>
+        <iframe src="books/anxious-for-nothing-chapters-1-thru-4.pdf" frameborder="0" height="280rem" width="200rem"></iframe>
+        <iframe src="books/the_blackwell_companion_to_the_roman_empire.pdf" frameborder="0" height="280rem" width="200rem"></iframe>
+        <iframe src="books/How to Have a Good Day.pdf" frameborder="0" height="280rem" width="200rem"></iframe>
+          
+              <form method="post" enctype="multipart/form-data">
+                            <label for="file">File</label>
+                            <input id="file" name="file" type="file" />
+                            <button>Upload</button>
+                          </form>
+        
+    </div>
+</div>
+
 
 
 
 
   </main>
-
+  <div id="flowers"><img src="images/pink-flowers-7004965_1280.png" alt=""></div>
   <footer>
+   
     <ul>
       <li>&copy;2024 Catangel007</li>
       <li><a href="">Contact us</a></li>
