Add: form elements to add book to library

--- a/index.html
+++ b/index.html
@@ -20,14 +20,19 @@
             <input type="text">
         </li>
         <li> <a href="https://www.amazon.com/books-used-books-textbooks/b?ie=UTF8&node=283155"><img src="images/cart.png" alt="shopping button" height="30px" width="30px"></a> </li>
-        <button class="add"><img src="images/plus-thick.png" alt="add book to library" height="30px" width="30px"></button>
+       
     </ul>
 </nav>
   </header>
+  <header class="sub-header">
+  <h1>library</h1>
+  <button class="add"><img src="images/plus-thick.png" alt="add book to library" height="30px" width="30px"></button><hr>
+</header>
   <main>
 
-<h1>library<hr></h1>
 
+<div class="genre">
+<h1>Books</h1>
 <div id="textbooks">
     <div><h1>Textbooks</h1></div>
     <div class="book-setting">
@@ -98,16 +103,17 @@
         </ul>
     </div>
 </div>
+</div>
 
-<div>
+<div class="new-additions">
     <h1>New additions</h1>
     <div class="trending">
-        <iframe src="books/ItStartswithUs.pdf" frameborder="0" height="280rem" width="200rem"></iframe>
-        <iframe src="books/Remarkably-Bright-Creatures.pdf" frameborder="0" height="280rem" width="200rem"></iframe>
-        <iframe src="books/A-Mind-for-Numbers-PDFdrive.pdf" frameborder="0" height="280rem" width="200rem"></iframe>
-        <iframe src="books/anxious-for-nothing-chapters-1-thru-4.pdf" frameborder="0" height="280rem" width="200rem"></iframe>
-        <iframe src="books/the_blackwell_companion_to_the_roman_empire.pdf" frameborder="0" height="280rem" width="200rem"></iframe>
-        <iframe src="books/How to Have a Good Day.pdf" frameborder="0" height="280rem" width="200rem"></iframe>
+        <iframe src="books/ItStartswithUs.pdf" frameborder="0" height="200rem" width="150rem"></iframe>
+        <iframe src="books/Remarkably-Bright-Creatures.pdf" frameborder="0" height="200rem" width="150rem"></iframe>
+        <iframe src="books/A-Mind-for-Numbers-PDFdrive.pdf" frameborder="0" height="200rem" width="150rem"></iframe>
+        <iframe src="books/anxious-for-nothing-chapters-1-thru-4.pdf" frameborder="0" height="200rem" width="150rem"></iframe>
+        <iframe src="books/the_blackwell_companion_to_the_roman_empire.pdf" frameborder="0" height="200rem" width="150rem"></iframe>
+        <iframe src="books/How to Have a Good Day.pdf" frameborder="0" height="200rem" width="150rem"></iframe>
           
               <form method="post" enctype="multipart/form-data">
                             <label for="file">File</label>
