Update genreform input

--- a/index.html
+++ b/index.html
@@ -28,18 +28,20 @@
   <header class="sub-header">
   <h1>library</h1>
   <button class="add-new"><img src="images/plus-thick.png" alt="add book to library" height="30px" width="30px">
+
+
     <dialog class="modal" >
          <div class="book-display"> <button class="add"><img src="images/plus-thick.png" alt="add book to library" height="30px" width="30px"></button></div>
         <form  method="dialog" >
             <label for="title">Title:</label>
-            <input type="text" id="title-input" name="title">
+            <input type="text" id="title-input" name="title" required>
 
             <label for="author">Author:</label>
-            <input type="text" id="author-input" name="author">
+            <input type="text" id="author-input" name="author" required>
 
             <label for="genre">Genre:</label>
             <select name="genre" id="genre">
-                <option value="">Choose Genre</option>
+                <option value="default">Choose Genre</option>
                 <option value="textbooks">Textbooks</option>
                 <option value="drama">Drama</option>
                 <option value="history">History</option>
@@ -48,10 +50,10 @@
                 <option value="fantasy">Fantasy</option>
                 <option value="sci-fi">Sci-fi</option>
             </select>
-            <input type="text" id="genre-input" name="genre">
+            <input type="text" id="genre-input" name="genre" value="select" required>
 
             <label for="pages">Pages:</label>
-            <input type="number" id="pages-input" name="pages">
+            <input type="number" id="pages-input" name="pages" required>
 
           <button type="submit" id="add-book">Add book</button>
         </form>
