--- a/index.html
+++ b/index.html
@@ -18,51 +18,56 @@
     <nav>
         <ul>
         <li class="search"><img src="images/magnify.png" alt="search button" height="30px" width="30px">
-            <input type="text">
+            <input type="text" placeholder="Search library">
         </li>
         <li> <a href="https://www.amazon.com/books-used-books-textbooks/b?ie=UTF8&node=283155"><img src="images/cart.png" alt="shopping button" height="30px" width="30px"></a> </li>
        
     </ul>
 </nav>
   </header>
-  <header class="sub-header">
+  
+  <div class="sub-header">
   <h1>library</h1>
   <button class="add-new"><img src="images/plus-thick.png" alt="add book to library" height="30px" width="30px">
 
 
-    <dialog class="modal" >
-         <div class="book-display"> <button class="add"><img src="images/plus-thick.png" alt="add book to library" height="30px" width="30px"></button></div>
-        <form  method="dialog" >
-            <label for="title">Title:</label>
-            <input type="text" id="title-input" name="title" required>
+   
+</button>
+</div>
 
-            <label for="author">Author:</label>
-            <input type="text" id="author-input" name="author" required>
+<dialog class="modal" >
+    <div class="book-display"> <button class="add"><img src="images/plus-thick.png" alt="add book to library" height="30px" width="30px"></button></div>
+   <form  method="dialog" >
+       <label for="title">Title:</label>
+       <input type="text" id="title-input" name="title" required>
 
-            <label for="genre">Genre:</label>
-            <select name="genre" id="genre">
-                <option value="default">Choose Genre</option>
-                <option value="textbooks">Textbooks</option>
-                <option value="drama">Drama</option>
-                <option value="history">History</option>
-                <option value="poetry">Poetry</option>
-                <option value="fiction">Fiction</option>
-                <option value="fantasy">Fantasy</option>
-                <option value="sci-fi">Sci-fi</option>
-            </select>
-            <input type="text" id="genre-input" name="genre" value="select" required>
+       <label for="author">Author:</label>
+       <input type="text" id="author-input" name="author" required>
 
-            <label for="pages">Pages:</label>
-            <input type="number" id="pages-input" name="pages" required>
+       <label for="genre">Genre:</label>
+       <select name="genre" id="genre">
+           <option value="default">Choose Genre</option>
+           <option value="textbooks">Textbooks</option>
+           <option value="drama">Drama</option>
+           <option value="history">History</option>
+           <option value="poetry">Poetry</option>
+           <option value="fiction">Fiction</option>
+           <option value="fantasy">Fantasy</option>
+           <option value="sci-fi">Sci-fi</option>
+       </select>
+       <input type="text" id="genre-input" name="genre" value="select" required>
 
-          <button type="submit" id="add-book">Add book</button>
-        </form>
-    </dialog>
-</button><hr>
-</header>
+       <label for="pages">Pages:</label>
+       <input type="number" id="pages-input" name="pages" required>
+
+     <button type="submit" id="add-book">Add book</button>
+   </form>
+</dialog>
+
+
+
+
   <main>
-
-
 <div class="genre">
 <h1>Books</h1>
 <div id="textbooks">
