Create button for delete book

--- a/fiction.html
+++ b/fiction.html
@@ -36,7 +36,7 @@
 </div>
 
    <div class="banner">
-    <img src="" alt="">
+    <img src="images/fiction.jpg" alt="">
     <div class="book-shelf"></div>
    </div>
   <footer>
