--- a/sci-fi.html
+++ b/sci-fi.html
@@ -36,7 +36,7 @@
 </div>
 
    <div class="banner">
-    <img src="" alt="">
+    <img src="images/sci-fi.jpg" alt="">
     <div class="book-shelf"></div>
    </div>
    <div id="flowers"><img src="images/pink-flowers-7004965_1280.png" alt=""></div>
