--- a/fantasy.html
+++ b/fantasy.html
@@ -36,7 +36,7 @@
 </div>
 
    <div class="banner">
-    <img src="" alt="">
+    <img src="images/dragon.jpg" alt="">
     <div class="book-shelf"></div>
    </div>
   <footer>
