Feat : DOM manipulation for form elements

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
        <form id="form-file" method="post" enctype="multipart/form-data">
         <label for="file">File:</label>
-        <input id="file" name="file" type="file" />
+        <input id="file" name="file" type="file" accept=".jpg, .jpeg, .png, .pdf" />
        </form>
 
        <!-- <div> 
